# PopScope

./: README.md  docker-compose.yml  run.sh
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  country_development.tsv  main.py
backend/app/controllers/: __init__.py  analytics_controller.py  country_controller.py
backend/app/data/: country_data.py
backend/app/models/: __init__.py  analytics.py  country.py
backend/app/services/: __init__.py  analytics_service.py  country_service.py
platform/: Dockerfile  package-lock.json  package.json  postcss.config.mjs
platform/app/: globals.css  layout.tsx  page.tsx
platform/app/components/analytics/: AnalyticsDashboard.tsx
platform/app/components/common/: CountrySelect.tsx  CountrySelector.tsx  Footer.tsx  GrowthMetrics.tsx  Layout.tsx  Navbar.tsx  PopulationChart.tsx
platform/app/components/dashboard/: FeaturesSection.tsx  HeroSection.tsx  StatsSection.tsx
platform/app/dashboard/: page.tsx
platform/app/lib/services/: api.ts
platform/types/: jvectormap-next.d.ts
